--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ jdk:
 services:
   - docker
 before_install:
-  - docker pull ruo91/arcus
-  - docker run -d --name="arcus-admin" -h "arcus" arcus-admin
-  - docker run -d --name="arcus-memcached-1" -h "memcached-1" arcus-memcached
+  - docker pull ikhoon/arcus-dockerfile
+  - docker run -d -p 2181:2181 -p 11211:11211 -p 11212:11212 ikhoon/arcus-dockerfile
 script:
   - sbt +test
 cache:
